crates/skopli-capi/include/skopli.h

typedef enum AgStatus AgStatus;
typedef int32_t AgStatus;
/**
 * A library-owned byte buffer handed out to the caller. `ptr` points at `len`
 * bytes of UTF-8 JSON (no trailing NUL); free it with [`ag_buf_free`]. A
 * zero/`len == 0` buffer has `ptr == null` and needs no free.
 */
typedef struct {
  /**
   * Pointer to the first byte, or null when `len == 0`.
   */
  uint8_t *ptr;
  /**
   * Length in bytes.
   */
  uintptr_t len;
} AgBuf;
/**
 * The ABI version integer. Bumped on a breaking ABI change.
 */
uint32_t ag_abi_version(void);
/**
 * The conformance `schema_version` this build emits.
 */
uint32_t ag_schema_version(void);
/**
 * A pointer to a static NUL-terminated library semver string. NEVER freed.
 */
const char *ag_version(void);
/**
 * Detect which registered harnesses have readable data reachable from the
 * context in `opts_json` (`{home?, env?}`; null = process defaults). Writes a
 * `{supported: string[], unsupported: string[]}` JSON buffer to `*out`.
 *
 * # Safety
 * `opts_json`/`opts_len` describe a readable buffer or (null, 0); `out` is a
 * valid writable `*mut AgBuf`.
 */
AgStatus ag_detect_harnesses(const char *opts_json, uintptr_t opts_len, AgBuf *out);
/**
 * Read usage across the selected harnesses. `opts_json`
 * (`{home?, env?, harnesses?, since?, until?, tz?, subagents?}`; null =
 * defaults) drives detection/filtering. Writes an
 * `{events, diagnostics, skipped}` JSON buffer to `*out`.
 *
 * # Safety
 * See [`ag_detect_harnesses`].
 */
AgStatus ag_read_usage(const char *opts_json, uintptr_t opts_len, AgBuf *out);
/**
 * Roll up an event array by a dimension. `events_json` is a `UsageEvent[]`;
 * `opts_json` is `{by, tz?, blockMs?}`. Writes a `Rollup[]` JSON buffer to
 * `*out`.
 *
 * # Safety
 * Both JSON args describe readable buffers or (null, 0); `out` is writable.
 */
AgStatus ag_rollup(const char *events_json,
                   uintptr_t events_len,
                   const char *opts_json,
                   uintptr_t opts_len,
                   AgBuf *out);