sdks/java/src/main/java/com/skopli/ffi/Skopli.java

// Generated by jextract

package com.skopli.ffi;

import java.lang.invoke.*;
import java.lang.foreign.*;
import java.nio.ByteOrder;
import java.util.*;
import java.util.function.*;
import java.util.stream.*;

import static java.lang.foreign.ValueLayout.*;
import static java.lang.foreign.MemoryLayout.PathElement.*;

public class Skopli {

    Skopli() {
        // Should not be called directly
    }

    static final Arena LIBRARY_ARENA = Arena.ofAuto();
    static final boolean TRACE_DOWNCALLS = Boolean.getBoolean("jextract.trace.downcalls");

    static void traceDowncall(String name, Object... args) {
         String traceArgs = Arrays.stream(args)
                       .map(Object::toString)
                       .collect(Collectors.joining(", "));
         System.out.printf("%s(%s)\n", name, traceArgs);
    }

    static MemorySegment findOrThrow(String symbol) {
        return SYMBOL_LOOKUP.find(symbol)
            .orElseThrow(() -> new UnsatisfiedLinkError("unresolved symbol: " + symbol));
    }

    static MethodHandle upcallHandle(Class<?> fi, String name, FunctionDescriptor fdesc) {
        try {
            return MethodHandles.lookup().findVirtual(fi, name, fdesc.toMethodType());
        } catch (ReflectiveOperationException ex) {
            throw new AssertionError(ex);
        }
    }

    static MemoryLayout align(MemoryLayout layout, long align) {
        return switch (layout) {
            case PaddingLayout p -> p;
            case ValueLayout v -> v.withByteAlignment(align);
            case GroupLayout g -> {
                MemoryLayout[] alignedMembers = g.memberLayouts().stream()
                        .map(m -> align(m, align)).toArray(MemoryLayout[]::new);
                yield g instanceof StructLayout ?
                        MemoryLayout.structLayout(alignedMembers) : MemoryLayout.unionLayout(alignedMembers);
            }
            case SequenceLayout s -> MemoryLayout.sequenceLayout(s.elementCount(), align(s.elementLayout(), align));
        };
    }

    static final SymbolLookup SYMBOL_LOOKUP = SymbolLookup.loaderLookup()
            .or(Linker.nativeLinker().defaultLookup());

    public static final ValueLayout.OfBoolean C_BOOL = ValueLayout.JAVA_BOOLEAN;
    public static final ValueLayout.OfByte C_CHAR = ValueLayout.JAVA_BYTE;
    public static final ValueLayout.OfShort C_SHORT = ValueLayout.JAVA_SHORT;
    public static final ValueLayout.OfInt C_INT = ValueLayout.JAVA_INT;
    public static final ValueLayout.OfLong C_LONG_LONG = ValueLayout.JAVA_LONG;
    public static final ValueLayout.OfFloat C_FLOAT = ValueLayout.JAVA_FLOAT;
    public static final ValueLayout.OfDouble C_DOUBLE = ValueLayout.JAVA_DOUBLE;
    public static final AddressLayout C_POINTER = ValueLayout.ADDRESS
            .withTargetLayout(MemoryLayout.sequenceLayout(java.lang.Long.MAX_VALUE, JAVA_BYTE));
    public static final ValueLayout.OfInt C_LONG = ValueLayout.JAVA_INT;
    public static final ValueLayout.OfDouble C_LONG_DOUBLE = ValueLayout.JAVA_DOUBLE;
    /**
     * {@snippet lang=c :
     * typedef int32_t AgStatus
     * }
     */
    public static final OfInt AgStatus = Skopli.C_INT;

    private static class ag_abi_version {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Skopli.C_INT    );

        public static final MemorySegment ADDR = Skopli.findOrThrow("ag_abi_version");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t ag_abi_version()
     * }
     */
    public static FunctionDescriptor ag_abi_version$descriptor() {
        return ag_abi_version.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t ag_abi_version()
     * }
     */
    public static MethodHandle ag_abi_version$handle() {
        return ag_abi_version.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint32_t ag_abi_version()
     * }
     */
    public static MemorySegment ag_abi_version$address() {
        return ag_abi_version.ADDR;
    }

    /**
     * {@snippet lang=c :
     * uint32_t ag_abi_version()
     * }
     */
    public static int ag_abi_version() {
        var mh$ = ag_abi_version.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ag_abi_version");
            }
            return (int)mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ag_schema_version {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Skopli.C_INT    );

        public static final MemorySegment ADDR = Skopli.findOrThrow("ag_schema_version");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t ag_schema_version()
     * }
     */
    public static FunctionDescriptor ag_schema_version$descriptor() {
        return ag_schema_version.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t ag_schema_version()
     * }
     */
    public static MethodHandle ag_schema_version$handle() {
        return ag_schema_version.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint32_t ag_schema_version()
     * }
     */
    public static MemorySegment ag_schema_version$address() {
        return ag_schema_version.ADDR;
    }

    /**
     * {@snippet lang=c :
     * uint32_t ag_schema_version()
     * }
     */
    public static int ag_schema_version() {
        var mh$ = ag_schema_version.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ag_schema_version");
            }
            return (int)mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ag_version {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Skopli.C_POINTER    );

        public static final MemorySegment ADDR = Skopli.findOrThrow("ag_version");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const char *ag_version()
     * }
     */
    public static FunctionDescriptor ag_version$descriptor() {
        return ag_version.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const char *ag_version()
     * }
     */
    public static MethodHandle ag_version$handle() {
        return ag_version.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const char *ag_version()
     * }
     */
    public static MemorySegment ag_version$address() {
        return ag_version.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const char *ag_version()
     * }
     */
    public static MemorySegment ag_version() {
        var mh$ = ag_version.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ag_version");
            }
            return (MemorySegment)mh$.invokeExact();
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ag_detect_harnesses {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Skopli.C_INT,
            Skopli.C_POINTER,
            Skopli.C_LONG_LONG,
            Skopli.C_POINTER
        );

        public static final MemorySegment ADDR = Skopli.findOrThrow("ag_detect_harnesses");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * AgStatus ag_detect_harnesses(const char *opts_json, uintptr_t opts_len, AgBuf *out)
     * }
     */
    public static FunctionDescriptor ag_detect_harnesses$descriptor() {
        return ag_detect_harnesses.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * AgStatus ag_detect_harnesses(const char *opts_json, uintptr_t opts_len, AgBuf *out)
     * }
     */
    public static MethodHandle ag_detect_harnesses$handle() {
        return ag_detect_harnesses.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * AgStatus ag_detect_harnesses(const char *opts_json, uintptr_t opts_len, AgBuf *out)
     * }
     */
    public static MemorySegment ag_detect_harnesses$address() {
        return ag_detect_harnesses.ADDR;
    }

    /**
     * {@snippet lang=c :
     * AgStatus ag_detect_harnesses(const char *opts_json, uintptr_t opts_len, AgBuf *out)
     * }
     */
    public static int ag_detect_harnesses(MemorySegment opts_json, long opts_len, MemorySegment out) {
        var mh$ = ag_detect_harnesses.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ag_detect_harnesses", opts_json, opts_len, out);
            }
            return (int)mh$.invokeExact(opts_json, opts_len, out);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ag_read_usage {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Skopli.C_INT,
            Skopli.C_POINTER,
            Skopli.C_LONG_LONG,
            Skopli.C_POINTER
        );

        public static final MemorySegment ADDR = Skopli.findOrThrow("ag_read_usage");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * AgStatus ag_read_usage(const char *opts_json, uintptr_t opts_len, AgBuf *out)
     * }
     */
    public static FunctionDescriptor ag_read_usage$descriptor() {
        return ag_read_usage.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * AgStatus ag_read_usage(const char *opts_json, uintptr_t opts_len, AgBuf *out)
     * }
     */
    public static MethodHandle ag_read_usage$handle() {
        return ag_read_usage.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * AgStatus ag_read_usage(const char *opts_json, uintptr_t opts_len, AgBuf *out)
     * }
     */
    public static MemorySegment ag_read_usage$address() {
        return ag_read_usage.ADDR;
    }

    /**
     * {@snippet lang=c :
     * AgStatus ag_read_usage(const char *opts_json, uintptr_t opts_len, AgBuf *out)
     * }
     */
    public static int ag_read_usage(MemorySegment opts_json, long opts_len, MemorySegment out) {
        var mh$ = ag_read_usage.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ag_read_usage", opts_json, opts_len, out);
            }
            return (int)mh$.invokeExact(opts_json, opts_len, out);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ag_rollup {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Skopli.C_INT,
            Skopli.C_POINTER,
            Skopli.C_LONG_LONG,
            Skopli.C_POINTER,
            Skopli.C_LONG_LONG,
            Skopli.C_POINTER
        );

        public static final MemorySegment ADDR = Skopli.findOrThrow("ag_rollup");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
